--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="src/index.js"></script>
   </head>
   <body>
-    <div id="app">Loading..</div>
+    <main id="app">Loading..</main>
     <div id="popup" class="popup"></div>
   </body>
 </html>
