--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="src/index.ts"></script>
   </head>
   <body>
-    <main id="app">Loading..</main>
+    <main id="app"></main>
     <div id="popup" class="popup"></div>
   </body>
 </html>
