--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Chat App</title>
-    <link rel="stylesheet" href="src/styles.scss" />
-    <script type="module" src="src/index.ts"></script>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <main id="app"></main>
